--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <!-- Logo y titulo con link a la pagina de inicio -->
-        <div class="logo centerItemsGrid">
-            <a href="./index.html"><img class="logoSite" src="./images/logo-nekzus-game-store-shadow.png"
+        <div class="header__logo logo--center-items-grid">
+            <a href="./index.html"><img class="header__logo-site" src="./images/logo-nekzus-game-store-shadow.png"
                     alt="logo" /></a>
         </div>
-        <div class="title centerItemsGrid">
+        <div class="header__title title--center-items-grid">
             <a href="./index.html">
                 <div class="animate__animated animate__rubberBand">
-                    <h1 class="titleSite">
-                        Nekzus<span class="subtitleSite">Game Store</span>
+                    <h1 class="header__title-site">
+                        Nekzus<span class="header__subtitle-site">Game Store</span>
                     </h1>
                 </div>
             </a>
