--- a/index.html
+++ b/index.html
@@ -6,43 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- LINKS DE ICONOS Y FAVICONS -->
-    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-    <link rel="manifest" href="icons/site.webmanifest">
-    <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="icons/favicon.ico">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="icons/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png" />
+    <link rel="manifest" href="icons/site.webmanifest" />
+    <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#5bbad5" />
+    <link rel="shortcut icon" href="icons/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="msapplication-config" content="icons/browserconfig.xml" />
+    <meta name="theme-color" content="#ffffff" />
     <!-- LINKS DE CSS -->
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <!-- AOS animaciones -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- Custom -->
     <link rel="stylesheet" href="./css/stylescss.css" />
     <title>Nekzus Game Store - Home Page</title>
     <!-- META DESCRIPTION -->
     <meta name="description"
-        content="Nekzus Game Store es una tienda de videojuegos en línea, donde podrás encontrar todo tipo de videojuegos, desde los más populares hasta los más nuevos.">
+        content="Nekzus Game Store es una tienda de videojuegos en línea, donde podrás encontrar todo tipo de videojuegos, desde los más populares hasta los más nuevos." />
     <!-- META KEYWORDS -->
-    <meta name="keywords" content="STORE, TIENDA, GAMER. VIDEOJUEGOS, JUEGOS, PC, PLAYSTATION, XBOX, NINTENDO">
+    <meta name="keywords" content="STORE, TIENDA, GAMER. VIDEOJUEGOS, JUEGOS, PC, PLAYSTATION, XBOX, NINTENDO" />
 </head>
 
 <body>
     <header class="header">
         <!-- Logo y titulo con link a la pagina de inicio -->
-        <div class="header__logo logo--center-items-grid">
-            <a href="./index.html"><img class="header__logo-site" src="./images/logo-nekzus-game-store-shadow.png"
-                    alt="logo" /></a>
+        <div class="logo">
+            <a href="./index.html" class="logo__link"><img class="logo__site"
+                    src="./images/logo-nekzus-game-store-shadow.png" alt="logo" /></a>
         </div>
-        <div class="header__title title--center-items-grid">
-            <a href="./index.html">
+        <div class="title">
+            <a href="./index.html" class="title__link">
                 <div class="animate__animated animate__rubberBand">
-                    <h1 class="header__title-site">
-                        Nekzus<span class="header__subtitle-site">Game Store</span>
+                    <h1 class="title__site">
+                        Nekzus<span class="title__subtitle-site">Game Store</span>
                     </h1>
                 </div>
             </a>
@@ -87,8 +87,10 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search" />
+                    <button class="btn btn-outline-success" type="submit">
+                        Buscar
+                    </button>
                 </form>
             </div>
         </div>
@@ -110,38 +112,48 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./images/slider_Forza-Horizon-5.webp" class="d-block w-100" alt="slide1">
+                    <img src="./images/slider_Forza-Horizon-5.webp" class="d-block w-100" alt="slide1" />
                     <div class="carousel-caption d-none d-md-block">
                         <h5>FORZA HORIZON 5</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
+                        <p>
+                            Some representative placeholder content for the first slide.
+                        </p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/slider_Borderlands-2.webp" class="d-block w-100" alt="slide2">
+                    <img src="./images/slider_Borderlands-2.webp" class="d-block w-100" alt="slide2" />
                     <div class="carousel-caption d-none d-md-block">
                         <h5>BORDERLANDS 2</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                        <p>
+                            Some representative placeholder content for the second slide.
+                        </p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/slider_Red-Dead-Redemption-2.webp" class="d-block w-100" alt="slide3">
+                    <img src="./images/slider_Red-Dead-Redemption-2.webp" class="d-block w-100" alt="slide3" />
                     <div class="carousel-caption d-none d-md-block">
                         <h5>RED DEAD REDEMPTION 2</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <p>
+                            Some representative placeholder content for the third slide.
+                        </p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/slider_The-Witcher-3-Wild-Hunt.webp" class="d-block w-100" alt="slide4">
+                    <img src="./images/slider_The-Witcher-3-Wild-Hunt.webp" class="d-block w-100" alt="slide4" />
                     <div class="carousel-caption d-none d-md-block">
                         <h5>THE WITCHER 3</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <p>
+                            Some representative placeholder content for the third slide.
+                        </p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/slider_COD-Modern-Warfare.webp" class="d-block w-100" alt="slide5">
+                    <img src="./images/slider_COD-Modern-Warfare.webp" class="d-block w-100" alt="slide5" />
                     <div class="carousel-caption d-none d-md-block">
                         <h5>COD MODERN WARFARE</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <p>
+                            Some representative placeholder content for the third slide.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -229,22 +241,22 @@
             </div>
         </section>
         <!-- Animacion faces -->
-        <section class="animationContainer">
-            <label class="animation" data-aos="fade-right">
-                <input type="radio" name="pink">
-                <div class="face"></div>
+        <section class="animation">
+            <label class="face" data-aos="fade-right">
+                <input class="face__input-face" type="radio" name="pink" />
+                <div class="face__smile"></div>
             </label>
-            <label class="animation" data-aos="fade-right">
-                <input type="radio" name="green">
-                <div class="face"></div>
+            <label class="face" data-aos="fade-right">
+                <input class="face__input-face"" type="radio" name="green" />
+                <div class="face__smile"></div>
             </label>
-            <label class="animation" data-aos="fade-left">
-                <input type="radio" name="pink">
-                <div class="face"></div>
+            <label class="face" data-aos="fade-left">
+                <input class="face__input-face"" type="radio" name="pink" />
+                <div class="face__smile"></div>
             </label>
-            <label class="animation" data-aos="fade-left">
-                <input type="radio" name="green">
-                <div class="face"></div>
+            <label class="face" data-aos="fade-left">
+                <input class="face__input-face"" type="radio" name="green" />
+                <div class="face__smile"></div>
             </label>
         </section>
         <!-- Listado de productos en oferta: listado horizontal -->
@@ -347,68 +359,72 @@
         <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="menuCart"
             aria-labelledby="menuCartLabel">
             <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="menuCartLabel">Carrito de compras</h5>
-                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                <h5 class="offcanvas-header__title" id="menuCartLabel">Carrito de compras</h5>
+                <button type="button" class="offcanvas-header__btn-close btn-close text-reset" data-bs-dismiss="offcanvas"
                     aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-                <h5 class="product">Producto</h5>
-                <h5 class="price">Subtotal</h5>
-                <h6 class="total">Total:</h6>
-                <h6 class="totalPrice">$ total:</h6>
-                <button type="button" class="btnBuy btn btn-outline-info">Comprar</button>
+                <h5 class="offcanvas-body__product">Producto</h5>
+                <h5 class="offcanvas-body__price">Subtotal</h5>
+                <h6 class="offcanvas-body__total">Total:</h6>
+                <h6 class="offcanvas-body__total-price">$ total:</h6>
+                <button type="button" class="offcanvas-body__btn-buy btn btn-outline-info">
+                    Comprar
+                </button>
             </div>
         </div>
     </main>
-    <footer>
-        <div class="footerSocials">
+    <footer class="footer">
+        <div class="pre-footer">
             <!-- Sobre nosotros -->
-            <section class="sectionAbout" data-aos="zoom-in">
-                <h3>Sobre Nekzus Game Store</h3>
-                <p>
+            <section class="section-about" data-aos="zoom-in">
+                <h3 class="section-about__title-about">Sobre Nekzus Game Store</h3>
+                <p class="section-about__desc-about">
                     Nekzus Game Store es una tienda de videojuegos en línea, donde
                     podrás encontrar todo tipo de videojuegos, desde los más populares
                     hasta los más nuevos.
                 </p>
             </section>
             <!-- Redes sociales, newsletter y contacto -->
-            <section class="sectionSocials">
+            <section class="section-follow">
                 <div class="newsletter" data-aos="zoom-in">
-                    <h3>Suscribete</h3>
-                    <form action="#">
-                        <input type="email" name="email" id="email" placeholder="Ingresa tu email" />
-                        <button class="btnSubmitNews btn btn-outline-info">Enviar</button>
+                    <h3 class="newsletter__title">Suscribete</h3>
+                    <form class="form" action="#">
+                        <input class="form__email" type="email" name="email" id="email"
+                            placeholder="Ingresa tu email" />
+                        <button class="form__button form__button--btn-news btn btn-outline-info">Enviar</button>
                     </form>
                 </div>
                 <div class="socials" data-aos="zoom-in">
-                    <h3>Síguenos en:</h3>
-                    <a href="https://www.youtube.com/" title="YouTube" target="_blank"><i id="youtube"
-                            class="bi bi-youtube"></i></a>
-                    <a href="https://es-la.facebook.com/" title="Facebook" target="_blank"><i id="facebook"
-                            class="bi bi-facebook"></i></a>
-                    <a href="https://www.instagram.com/" title="Instagram" target="_blank"><i id="instagram"
-                            class="bi bi-instagram"></i></a>
+                    <h3 class="socials__title">Síguenos en:</h3>
+                    <a class="socials__link socials__link--youtube" href="https://www.youtube.com/" title="YouTube"
+                        target="_blank"><i id="youtube" class="bi bi-youtube"></i></a>
+                    <a class="socials__link socials__link--facebook" href="https://es-la.facebook.com/" title="Facebook"
+                        target="_blank"><i id="facebook" class="bi bi-facebook"></i></a>
+                    <a class="socials__link socials__link--instagram" href="https://www.instagram.com/"
+                        title="Instagram" target="_blank"><i id="instagram" class="bi bi-instagram"></i></a>
                 </div>
                 <div class="contact" data-aos="zoom-in">
-                    <h3>Contacto</h3>
-                    <p>Nekzus Game Store</p>
-                    <p>Avenida Siempreviva, 742</p>
-                    <p>Ciudad de Springfield, Estados Unidos</p>
-                    <p class="telephone"><i class="bi bi-telephone-fill"> </i>5555-555555</p>
+                    <h3 class="contact__title">Contacto</h3>
+                    <p class="contact__text">Nekzus Game Store</p>
+                    <p class="contact__text">Avenida Siempreviva, 742</p>
+                    <p class="contact__text">Ciudad de Springfield, Estados Unidos</p>
+                    <p class="contact__text contact__text--telephone">
+                        <i class="bi bi-telephone-fill"> </i>5555-555555
+                    </p>
                 </div>
             </section>
         </div>
         <!-- Pie de pagina con copyright -->
-        <div class="footerCopyright">
-            <p class="copyright">&copy; 2022 Copyright - Nekzus Game Store</p>
+        <div class="copyright">
+            <p class="copyright__text">&copy; 2022 Copyright - Nekzus Game Store</p>
         </div>
     </footer>
     <!-- LINKS DE CSS -->
     <!-- Script Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
-    <!-- <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <!-- Script AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
