Se trabaja en aplicar metodologia BEM

--- a/html/contact.html
+++ b/html/contact.html
@@ -93,7 +93,7 @@
             </div>
         </div>
     </nav>
-    <main>
+    <main class="main">
         <!-- Formulario de contacto -->
         <section class="containerContentForm">
             <div class="subtitleForm">
