--- a/html/products.html
+++ b/html/products.html
@@ -93,7 +93,7 @@
             </div>
         </div>
     </nav>
-    <main>
+    <main class="main">
         <!-- Listado de productos -->
         <section class="containerContent">
             <div class="subtitle">
