--- a/html/login.html
+++ b/html/login.html
@@ -93,27 +93,27 @@
             </div>
         </div>
     </nav>
-    <main>
+    <main class="main">
         <!-- Formulario de inicio de sesión -->
-        <section class="containerContentForm">
-            <div class="subtitleForm">
-                <h3 class="contentSubtitle">Inicia sesión</h3>
+        <section class="form__container">
+            <div class="form__subtitle">
+                <h3 class="form__content-subtitle">Inicia sesión</h3>
             </div>
-            <div class="formGroup centerItemsGrid" data-aos="fade-zoom-in" data-aos-delay="200"
+            <div class="form__form-group  form__form-group--center-items-grid" data-aos="fade-zoom-in" data-aos-delay="200"
                 data-aos-duration="2000">
-                <h3>Introduce los datos de tu cuenta</h3>
-                <form class="form">
-                    <div class="mb-3 camp" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
-                        <label for="e-mail" class="form-label">E-mail usuario</label>
-                        <input type="email" class="form-control" id="e-mail" placeholder="Correo electronico">
+                <h3 class="form__title">Introduce los datos de tu cuenta</h3>
+                <form class="form__formu">
+                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
+                        <label for="e-mail" class="form__label form-label">E-mail usuario</label>
+                        <input type="email" class="form__control form-control" id="e-mail" placeholder="Correo electronico">
                     </div>
-                    <div class="mb-3 camp" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
-                        <label for="password-1" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password-1" placeholder="Contraseña">
+                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
+                        <label for="password-1" class="form__label form-label">Password</label>
+                        <input type="password" class="form__control form-control" id="password-1" placeholder="Contraseña">
                     </div>
-                    <button type="submit" class="btn btn-outline-info" data-aos="fade-up" data-aos-delay="600"
+                    <button type="submit" class="form__button-submit btn btn-outline-info" data-aos="fade-up" data-aos-delay="600"
                         data-aos-duration="1000">Iniciar sesión</button>
-                    <p>¿No tienes cuenta?<a href="./register.html"> Registrate</a></p>
+                    <p class="form__text">¿No tienes cuenta?<a class="form__link" href="./register.html"> Registrate</a></p>
                 </form>
             </div>
         </section>
