--- a/html/register.html
+++ b/html/register.html
@@ -95,7 +95,7 @@
             </div>
         </div>
     </nav>
-    <main>
+    <main class="main">
         <!-- Formulario de registro -->
         <section class="containerContentForm">
             <div class="subtitleForm">
