--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta name="keywords" content="STORE, TIENDA, GAMER. VIDEOJUEGOS, JUEGOS, PC, PLAYSTATION, XBOX, NINTENDO" />
 </head>
 
-<body>
+<body class="body">
     <header class="header">
         <!-- Logo y titulo con link a la pagina de inicio -->
         <div class="logo">
@@ -167,7 +167,7 @@
             </button>
         </div>
     </div>
-    <main>
+    <main class="main">
         <!-- Listado de productos destacados: listado horizontal -->
         <section class="containerContentHome">
             <div class="subtitle">
