Se aplica BEM a formularios

--- a/html/contact.html
+++ b/html/contact.html
@@ -95,32 +95,32 @@
     </nav>
     <main class="main">
         <!-- Formulario de contacto -->
-        <section class="containerContentForm">
-            <div class="subtitleForm">
-                <h3 class="contentSubtitle">Contactanos</h3>
+        <section class="form__container">
+            <div class="form__subtitle">
+                <h3 class="form__content-subtitle">Contactanos</h3>
             </div>
-            <div class="formGroup centerItemsGrid" data-aos="fade-zoom-in" data-aos-delay="200"
+            <div class="form__form-group  form__form-group--center-items-grid" data-aos="fade-zoom-in" data-aos-delay="200"
                 data-aos-duration="2000">
-                <h3>Completa el formulario de contacto</h3>
-                <form class="form">
-                    <div class="mb-3 camp" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
-                        <label for="name" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="name" placeholder="Nombre de usuario" required>
+                <h3 class="form__title">Completa el formulario de contacto</h3>
+                <form class="form__formu">
+                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
+                        <label for="name" class="form__label form-label">Nombre</label>
+                        <input type="text" class="form__control form-control" id="name" placeholder="Nombre de usuario" required>
                     </div>
-                    <div class="mb-3 camp" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
-                        <label for="e-mail" class="form-label">E-mail</label>
-                        <input type="email" class="form-control" id="e-mail" placeholder="E-mail" required>
+                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
+                        <label for="e-mail" class="form__label form-label">E-mail</label>
+                        <input type="email" class="form__control form-control" id="e-mail" placeholder="E-mail" required>
                     </div>
-                    <div class="mb-3 camp" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">
-                        <label for="telephone" class="form-label">Telefono</label>
-                        <input type="tel" class="form-control" id="telephone" placeholder="Telefono (opcional)">
+                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">
+                        <label for="telephone" class="form__label form-label">Teléfono</label>
+                        <input type="tel" class="form__control form-control" id="telephone" placeholder="Telefono (opcional)">
                     </div>
-                    <div class="mb-3 camp" data-aos="fade-up" data-aos-delay="800" data-aos-duration="1000">
-                        <label for="message" class="form-label">Mensaje</label>
-                        <textarea class="form-control" id="message" placeholder="Mensaje (opcional)"
+                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="800" data-aos-duration="1000">
+                        <label for="message" class="form__label form-label">Mensaje</label>
+                        <textarea class="form__text-area form__control form-control" id="message" placeholder="Mensaje (opcional)"
                             rows="10"></textarea>
                     </div>
-                    <button type="button" class="btn btn-outline-info" data-aos="fade-up" data-aos-delay="1000"
+                    <button type="button" class="form__button-submit btn btn-outline-info" data-aos="fade-up" data-aos-delay="1000"
                         data-aos-duration="1000">Enviar</button>
                 </form>
             </div>
