--- a/html/login.html
+++ b/html/login.html
@@ -99,21 +99,24 @@
             <div class="form__subtitle">
                 <h3 class="form__content-subtitle">Inicia sesión</h3>
             </div>
-            <div class="form__form-group  form__form-group--center-items-grid" data-aos="fade-zoom-in" data-aos-delay="200"
-                data-aos-duration="2000">
+            <div class="form__form-group  form__form-group--center-items-grid" data-aos="fade-zoom-in"
+                data-aos-delay="200" data-aos-duration="2000">
                 <h3 class="form__title">Introduce los datos de tu cuenta</h3>
                 <form class="form__formu">
                     <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
                         <label for="e-mail" class="form__label form-label">E-mail usuario</label>
-                        <input type="email" class="form__control form-control" id="e-mail" placeholder="Correo electronico">
+                        <input type="email" class="form__control form-control" id="e-mail"
+                            placeholder="Correo electronico">
                     </div>
                     <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
                         <label for="password-1" class="form__label form-label">Password</label>
-                        <input type="password" class="form__control form-control" id="password-1" placeholder="Contraseña">
+                        <input type="password" class="form__control form-control" id="password-1"
+                            placeholder="Contraseña">
                     </div>
-                    <button type="submit" class="form__button-submit btn btn-outline-info" data-aos="fade-up" data-aos-delay="600"
-                        data-aos-duration="1000">Iniciar sesión</button>
-                    <p class="form__text">¿No tienes cuenta?<a class="form__link" href="./register.html"> Registrate</a></p>
+                    <button type="submit" class="form__button-submit btn btn-outline-info" data-aos="fade-up"
+                        data-aos-delay="600" data-aos-duration="1000">Iniciar sesión</button>
+                    <p class="form__text">¿No tienes cuenta?<a class="form__link" href="./register.html"> Registrate</a>
+                    </p>
                 </form>
             </div>
         </section>
@@ -122,8 +125,8 @@
             aria-labelledby="menuCartLabel">
             <div class="offcanvas-header">
                 <h5 class="offcanvas-header__title" id="menuCartLabel">Carrito de compras</h5>
-                <button type="button" class="offcanvas-header__btn-close btn-close text-reset" data-bs-dismiss="offcanvas"
-                    aria-label="Close"></button>
+                <button type="button" class="offcanvas-header__btn-close btn-close text-reset"
+                    data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
                 <h5 class="offcanvas-body__product">Producto</h5>
