--- a/html/register.html
+++ b/html/register.html
@@ -97,37 +97,40 @@
     </nav>
     <main class="main">
         <!-- Formulario de registro -->
-        <section class="containerContentForm">
-            <div class="subtitleForm">
-                <h3 class="contentSubtitle">Registrate</h3>
+        <section class="form__container">
+            <div class="form__subtitle">
+                <h3 class="form__content-subtitle">Registrate</h3>
             </div>
-            <div class="formGroup centerItemsGrid" data-aos="fade-zoom-in" data-aos-delay="200"
-                data-aos-duration="2000">
-                <h3>Completa todos los campos</h3>
-                <form class="form">
-                    <div class="mb-3 camp" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
-                        <label for="name" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="name" placeholder="Nombre de usuario" required />
-                    </div>
-                    <div class="mb-3 camp" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
-                        <label for="e-mail" class="form-label">E-mail</label>
-                        <input type="email" class="form-control" id="e-mail" placeholder="E-mail" required />
-                    </div>
-                    <div class="mb-3 camp" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">
-                        <label for="password-1" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="password-1" placeholder="Contraseña" required />
-                    </div>
-                    <div class="mb-3 camp" data-aos="fade-up" data-aos-delay="800" data-aos-duration="1000">
-                        <label for="password-2" class="form-label">Confirmar contraseña</label>
-                        <input type="password" class="form-control" id="password-2" placeholder="Confirmar contraseña"
+            <div class="form__form-group  form__form-group--center-items-grid" data-aos="fade-zoom-in"
+                data-aos-delay="200" data-aos-duration="2000">
+                <h3 class="form__title">Completa todos los campos</h3>
+                <form class="form__formu">
+                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
+                        <label for="name" class="form__label form-label">Nombre</label>
+                        <input type="text" class="form__control form-control" id="name" placeholder="Nombre de usuario"
                             required />
                     </div>
-                    <button type="submit" class="btn btn-outline-info" data-aos="fade-up" data-aos-delay="1000"
-                        data-aos-duration="1000">
+                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
+                        <label for="e-mail" class="form__label form-label">E-mail</label>
+                        <input type="email" class="form__control form-control" id="e-mail" placeholder="E-mail"
+                            required />
+                    </div>
+                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">
+                        <label for="password-1" class="form__label form-label">Contraseña</label>
+                        <input type="password" class="form__control form-control" id="password-1"
+                            placeholder="Contraseña" required />
+                    </div>
+                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="800" data-aos-duration="1000">
+                        <label for="password-2" class="form__label form-label">Confirmar contraseña</label>
+                        <input type="password" class="form__control form-control" id="password-2"
+                            placeholder="Confirmar contraseña" required />
+                    </div>
+                    <button type="submit" class="form__button-submit btn btn-outline-info" data-aos="fade-up"
+                        data-aos-delay="1000" data-aos-duration="1000">
                         Registrarse
                     </button>
-                    <p>
-                        ¿Ya tienes una cuenta?<a href="./login.html"> Inicia sesión</a>
+                    <p class="form__text">
+                        ¿Ya tienes una cuenta?<a class="form__link" href="./login.html"> Inicia sesión</a>
                     </p>
                 </form>
             </div>
